[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "enterprise-dba-env"
version = "1.0.0"
description = "Enterprise DBA Agent Environment for OpenEnv"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "requests",
    "openai"
]